--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Disable git maintenance
         run: git config --global maintenance.auto 0
 
-      - name: Setup latest Go
+      - name: Setup Go 1.25.3
         uses: actions/setup-go@v4
         with:
-          go-version: 'latest'
+          go-version: '1.25.3'
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y make curl
@@ -115,7 +115,7 @@ jobs:
 
           if ! git diff --cached --quiet; then
             git commit -v -m "[CI] Update rule set files regularly"
-            git push -v origin HEAD   # 使用 HEAD 代替 master/main，推送到当前分支
+            git push -v origin HEAD   # 推送到当前默认分支
           else
             echo "No changes to commit, skipping push."
           fi
