--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Generate rule set files
 on:
   schedule:
     - cron: "0 0 * * *"  # Run daily at 0:00
-  workflow_dispatch:    # Allow run manually
+  workflow_dispatch:    # Allow manual trigger
 
 jobs:
   main:
@@ -24,12 +24,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
-          ref: master
+          fetch-depth: 0   # 完整克隆，自动使用默认分支
 
       - name: Use Golang
         uses: actions/setup-go@v4
         with:
-          go-version: '1.21'
+          go-version: '1.25.3'
       
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y make curl
@@ -66,7 +66,7 @@ jobs:
       - name: Decompile rule set files
         working-directory: ./configs
         env:
-          PATH: $HOME/go/bin:$PATH
+          PATH=$HOME/go/bin:$PATH
         run: |
           sing-box rule-set decompile geosite-cn.srs -o geosite-cn.json
           sing-box rule-set decompile geosite-private.srs -o geosite-private.json
@@ -83,7 +83,7 @@ jobs:
       - name: Merge rule set files
         working-directory: ./configs
         env:
-          PATH: $HOME/go/bin:$PATH
+          PATH=$HOME/go/bin:$PATH
         run: |
           sing-box rule-set merge -c geosite-cn.json -c geosite-private.json geosite-direct.json
           sing-box rule-set merge \
@@ -101,7 +101,7 @@ jobs:
       - name: Compile rule set files
         working-directory: ./configs
         env:
-          PATH: $HOME/go/bin:$PATH
+          PATH=$HOME/go/bin:$PATH
         run: |
           sing-box rule-set compile geosite-direct.json -o ../geosite-direct.srs
           sing-box rule-set compile geosite-reject.json -o ../geosite-reject.srs
@@ -119,7 +119,7 @@ jobs:
           git add -v geosite-direct.srs geosite-reject.srs geoip-direct.srs
           if ! git diff --cached --quiet; then
             git commit -v -m "[CI] Update rule set files regularly"
-            git push -v origin HEAD
+            git push -v origin HEAD  # 自动推送当前分支
           else
             echo "No changes to commit, skipping push."
           fi
