--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Generate rule set files
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Run daily at 0:00
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -20,6 +20,7 @@ jobs:
       GIT_TRACE_SETUP: 2
       GIT_TRACE_SHALLOW: 2
       GOFLAGS: "-v"
+      PATH: ${{ github.workspace }}/go/bin:$PATH   # 统一 PATH 环境变量
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -33,7 +34,7 @@ jobs:
       
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y make curl
-      
+
       - name: Create working directory
         run: mkdir -p configs
 
@@ -60,13 +61,10 @@ jobs:
         working-directory: ./sing-box
         run: |
           export GOPATH=$HOME/go
-          export PATH=$GOPATH/bin:$PATH
           make install --trace
 
       - name: Decompile rule set files
         working-directory: ./configs
-        env:
-          PATH: $HOME/go/bin:$PATH
         run: |
           sing-box rule-set decompile geosite-cn.srs -o geosite-cn.json
           sing-box rule-set decompile geosite-private.srs -o geosite-private.json
@@ -82,8 +80,6 @@ jobs:
 
       - name: Merge rule set files
         working-directory: ./configs
-        env:
-          PATH: $HOME/go/bin:$PATH
         run: |
           sing-box rule-set merge -c geosite-cn.json -c geosite-private.json geosite-direct.json
           sing-box rule-set merge \
@@ -100,8 +96,6 @@ jobs:
             
       - name: Compile rule set files
         working-directory: ./configs
-        env:
-          PATH: $HOME/go/bin:$PATH
         run: |
           sing-box rule-set compile geosite-direct.json -o ../geosite-direct.srs
           sing-box rule-set compile geosite-reject.json -o ../geosite-reject.srs
@@ -122,5 +116,6 @@ jobs:
             git push -v origin HEAD
           else
             echo "No changes to commit, skipping push."
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
