--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,20 +20,20 @@ jobs:
       GIT_TRACE_SETUP: 2
       GIT_TRACE_SHALLOW: 2
       GOFLAGS: "-v"
-      PATH: ${{ github.workspace }}/go/bin:$PATH   # 统一 PATH 环境变量
+      PATH: ${{ github.workspace }}/go/bin:$PATH
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
+      - name: Install dependencies
+        run: sudo apt-get update && sudo apt-get install -y make curl tar
+
       - name: Use Golang
         uses: actions/setup-go@v4
         with:
           go-version: '1.25.3'
-      
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y make curl
 
       - name: Create working directory
         run: mkdir -p configs
@@ -41,18 +41,14 @@ jobs:
       - name: Download SRS files
         working-directory: ./configs
         run: |
-          curl -L -o geoip-cn.srs https://raw.githubusercontent.com/SagerNet/sing-geoip/rule-set/geoip-cn.srs --trace --trace-time
-          curl -L -o geosite-cn.srs https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-cn.srs --trace --trace-time
-          curl -L -o geosite-private.srs https://raw.githubusercontent.com/SagerNet/sing-geosite/rule-set/geosite-private.srs --trace --trace-time
-          curl -L -o geosite-category-porn.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-porn.srs --trace --trace-time
-          curl -L -o geosite-category-cryptocurrency.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-cryptocurrency.srs --trace --trace-time
-          curl -L -o geosite-category-vpnservices.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-vpnservices.srs --trace --trace-time
-          curl -L -o geosite-category-entertainment-cn.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-entertainment-cn.srs --trace --trace-time
-          curl -L -o geosite-category-entertainment@cn.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-entertainment@cn.srs --trace --trace-time
-          curl -L -o geosite-category-games@cn.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-games@cn.srs --trace --trace-time
-          curl -L -o geosite-category-game-accelerator-cn.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-game-accelerator-cn.srs --trace --trace-time
-          curl -L -o geosite-category-enhance-gaming@cn.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-enhance-gaming@cn.srs --trace --trace-time
-          curl -L -o geosite-category-novel.srs https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/geosite-category-novel.srs --trace --trace-time
+          for file in \
+            geoip-cn geosite-cn geosite-private \
+            geosite-category-porn geosite-category-cryptocurrency geosite-category-vpnservices \
+            geosite-category-entertainment-cn geosite-category-entertainment@cn \
+            geosite-category-games@cn geosite-category-game-accelerator-cn \
+            geosite-category-enhance-gaming@cn geosite-category-novel; do
+              curl -L -o "$file.srs" "https://github.com/SagerNet/sing-geosite/raw/refs/heads/rule-set/$file.srs" --trace --trace-time
+          done
 
       - name: Clone sing-box
         run: git clone -v --depth 1 https://github.com/SagerNet/sing-box.git
@@ -66,17 +62,9 @@ jobs:
       - name: Decompile rule set files
         working-directory: ./configs
         run: |
-          sing-box rule-set decompile geosite-cn.srs -o geosite-cn.json
-          sing-box rule-set decompile geosite-private.srs -o geosite-private.json
-          sing-box rule-set decompile geosite-category-porn.srs -o geosite-category-porn.json
-          sing-box rule-set decompile geosite-category-cryptocurrency.srs -o geosite-category-cryptocurrency.json
-          sing-box rule-set decompile geosite-category-vpnservices.srs -o geosite-category-vpnservices.json
-          sing-box rule-set decompile geosite-category-entertainment-cn.srs -o geosite-category-entertainment-cn.json
-          sing-box rule-set decompile geosite-category-entertainment@cn.srs -o geosite-category-entertainment@cn.json
-          sing-box rule-set decompile geosite-category-games@cn.srs -o geosite-category-games@cn.json
-          sing-box rule-set decompile geosite-category-game-accelerator-cn.srs -o geosite-category-game-accelerator-cn.json
-          sing-box rule-set decompile geosite-category-enhance-gaming@cn.srs -o geosite-category-enhance-gaming@cn.json
-          sing-box rule-set decompile geosite-category-novel.srs -o geosite-category-novel.json
+          for f in *.srs; do
+            sing-box rule-set decompile "$f" -o "${f%.srs}.json"
+          done
 
       - name: Merge rule set files
         working-directory: ./configs
@@ -93,7 +81,7 @@ jobs:
             -c geosite-category-enhance-gaming@cn.json \
             -c geosite-category-novel.json \
             geosite-reject.json
-            
+
       - name: Compile rule set files
         working-directory: ./configs
         run: |
@@ -105,7 +93,7 @@ jobs:
         run: |
           mv -v geoip-cn.srs ../geoip-direct.srs
           rm -rvf configs
-        
+
       - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
